2010-03-25  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Eric Seidel.

        [Qt] websocket/tests/long-invalid-header.html fails
        https://bugs.webkit.org/show_bug.cgi?id=36492

        * websocket/tests/long-invalid-header-expected.txt: trim console message.

2010-03-25  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by David Levin.

        Rewrite the layout test editing/inserting/6633727 to use dumpAsText
        https://bugs.webkit.org/show_bug.cgi?id=31579

        * editing/inserting/6633727-expected.txt: Added.
        * editing/inserting/6633727.html:
        * editing/inserting/script-tests/6633727.js: Added.
        * platform/gtk/editing/inserting/6633727-expected.txt: Removed.
        * platform/mac/editing/inserting/6633727-expected.checksum: Removed.
        * platform/mac/editing/inserting/6633727-expected.png: Removed.
        * platform/mac/editing/inserting/6633727-expected.txt: Removed.

2010-03-24  Mark Rowe  <mrowe@apple.com>

        Revert the portion of r56489 that dealt with port zero as it introduced some test failures.

        * platform/mac/security/block-test-expected.txt:
        * security/block-test.html:

2010-03-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Darin Adler.

        WebKit should treat port numbers outside the valid range as being blacklisted
        <http://webkit.org/b/36571> / <rdar://problem/7790908>

        * platform/mac/security/block-test-expected.txt:
        * security/block-test.html: Add tests of a few invalid port numbers.

2010-03-24  MORITA Hajime  <morrita@google.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=36517
        svg/dom/frame-related-api-during-load.html shoud be more self-descriptive.

        * svg/dom/frame-related-api-during-load-expected.txt:
        * svg/dom/frame-related-api-during-load.html:

2010-03-24  Andrew Scherkus  <scherkus@chromium.org>
