@@ -1,0 +1,16 @@
+one
+two
+one
+two
+This tests the inclusion of objects with a title attribute.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS child.role is 'list'
+PASS child.role is 'section'
+PASS child.role is 'list'
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
